feat: Add comprehensive favicon and PWA support
- Generated favicon in multiple sizes for different devices
- Added PWA manifest and browser config
- Updated index.html with proper meta tags and icons
- Added support for iOS, Android, and Windows devices

--- a/index.html
+++ b/index.html
@@ -2,19 +2,52 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
     <title>AI Caller CRM - Intelligent Voice Assistant Dashboard</title>
     <meta name="description" content="Advanced AI-powered voice calling system with CRM integration, real-time transcription, and comprehensive analytics dashboard." />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="AI Caller CRM" />
+    <meta name="keywords" content="AI, CRM, Voice Assistant, Call Center, Analytics, Dashboard" />
+    
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <meta name="msapplication-TileColor" content="#2d89ef">
+    <meta name="msapplication-config" content="/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 
-    <meta property="og:title" content="AI Caller CRM - Intelligent Voice Assistant Dashboard" />
-    <meta property="og:description" content="Advanced AI-powered voice calling system with CRM integration, real-time transcription, and comprehensive analytics dashboard." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- Apple Touch Icons -->
+    <link rel="apple-touch-startup-image" href="/apple-touch-icon.png">
+    <meta name="apple-mobile-web-app-title" content="AI Caller CRM">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- PWA -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="AI Caller CRM">
+    <meta name="format-detection" content="telephone=no">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yourdomain.com">
+    <meta property="og:title" content="AI Caller CRM - Intelligent Voice Assistant Dashboard">
+    <meta property="og:description" content="Advanced AI-powered voice calling system with CRM integration, real-time transcription, and comprehensive analytics dashboard.">
+    <meta property="og:image" content="https://yourdomain.com/android-chrome-512x512.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://yourdomain.com">
+    <meta name="twitter:title" content="AI Caller CRM - Intelligent Voice Assistant Dashboard">
+    <meta name="twitter:description" content="Advanced AI-powered voice calling system with CRM integration, real-time transcription, and comprehensive analytics dashboard.">
+    <meta name="twitter:image" content="https://yourdomain.com/android-chrome-512x512.png">
+    <meta name="twitter:creator" content="@yourtwitter">
+
+    <!-- Additional Meta Tags -->
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
   </head>
 
   <body>
